Fixed z-index

--- a/data/templates/woocommerce/css/template.css
+++ b/data/templates/woocommerce/css/template.css
@@ -789,7 +789,7 @@ td.phpdocumentor-cell:last-child {
     opacity: 1;
     pointer-events: all;
     transition: opacity .3s, background .3s;
-    z-index: 9999;
+    z-index: 1000;
 }
 
 .phpdocumentor-search-results--hidden {
@@ -954,6 +954,7 @@ a.to-top {
     width: 2em;
     height: 2em;
     text-indent: -999em;
+    z-index: 1100;
 }
 
 a.to-top::before {
